# competitor-intelligence-engine

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  architecture.md  brain.md  competitors.json  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  gather_evidence.sh  locust_out_1000_failures.csv  locust_out_1000_stats.csv  locust_out_1000_stats_history.csv  locust_out_100_failures.csv  locust_out_100_stats.csv  locust_out_100_stats_history.csv  locust_out_10_failures.csv  locust_out_10_stats.csv  locust_out_10_stats_history.csv  locust_out_500_failures.csv  locust_out_500_stats.csv  locust_out_500_stats_history.csv  locust_out_50_failures.csv  locust_out_50_stats.csv  locust_out_50_stats_history.csv  locustfile.py  pyproject.toml  run_load_test.sh  system_metrics.csv  update_task.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  main.yml  release.yml
app/: chaos.py  main.py
app/ai/application/: pipeline.py  worker.py
app/ai/domain/: entities.py  provider.py
app/api/: auth.py  dependencies.py  middleware.py
app/api/endpoints/: ai.py  collection.py  competitors.py  dashboard.py  debug.py  health.py  metrics.py  reports.py
app/collectors/: base.py  budget_engine.py  company.py  content.py  crawl_budget.py  discovery.py  fetcher.py  pricing.py  service.py  social.py  technographic.py
app/configuration/: loader.py  models.py  secrets.py  settings.py
app/crawlfrontier/: __init__.py  frontier.py
app/database/: connection.py  models.py
app/database/repositories/: __init__.py  base.py  collection_log_repository.py  competitor_certification_repository.py  competitor_content_repository.py  competitor_page_repository.py  competitor_pricing_repository.py  competitor_repository.py  competitor_service_area_repository.py  competitor_service_repository.py  competitor_social_repository.py  competitor_source_repository.py  competitor_team_member_repository.py  raw_storage_repository.py
app/messagequeue/: __init__.py  queue.py
app/observability/: __init__.py  alerting.py  apm.py  apm_endpoint.py  benchmark_runner.py  entity_profiler.py  log_buffer.py  metrics_exporter.py  monitoring_dashboard.py  parser_metrics.py  performance_budgets.py  prometheus_metrics.py
app/parsers/: adaptive_orderer.py  base.py  block_extractor.py  company.py  content.py  discovery.py  dom_context.py  evidence.py  language_detector.py  page_classifier.py  page_segmenter.py  preprocessing.py  pricing.py  relationships.py  resolution.py  service.py  social.py  strategy.py  strategy_parser.py
app/parsers/strategies/: __init__.py  asset_extraction.py  breadcrumb_extraction.py  card_extraction.py  generic_css.py  (+18 more)
app/schedulers/: __init__.py  scheduler.py
app/security/: encryption.py
app/services/: change_detection_service.py  collection_service.py  config_sync_service.py  reporting_service.py  visual_diff_service.py  webhook_service.py  websocket_manager.py
app/static/: dashboard.html
app/storage/: provider.py
app/utilities/: content_hasher.py  metrics.py  performance.py  url_normalizer.py
app/workers/: __init__.py
dlq/: ai_failures.jsonl
docs/: README.md  acceptance-criteria.md  api-frontend-mapping.md  api.md  architecture.md  data-flow.md  database.md  deployment-architecture.md  end-to-end-flow.md  feature-traceability.md  future-scope.md  installation-guide.md  known-limitations.md  module-integration.md  pipeline_architecture.md  production-features.md  project-structure.md  scalability-performance.md  security.md  setup.md  technology-stack.md  ui-guide.md  verification-checklist.md  version-information.md
documentation/: architecture.md  deployment-guide.md  future-improvements.md  known-limitations.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
k8s/: canary.yaml  deployment.yaml  hpa.yaml  postgres.yaml  redis.yaml  secrets.yaml
migrations/: env.py
migrations/versions/: 000_consolidated_initial.py  37805048ca15_initial.py  6e50441e8997_add_extracted_data_to_raw_storage_and_.py  712fdbe261ba_initial_postgresql_schema.py  a1b2c3d4e5f6_add_team_certifications_service_areas.py  a2b3c4d5e6f7_add_storage_uri_and_provenance.py  b2c3d4e5f6g7_add_unique_constraints_for_upsert.py
scratch/: add_modal.py  check_raw_storage.py  evidence_runner.py  prove_a11y_gap.py  prove_memory_leak.py  run_collection.py  test_fetcher.py  test_homeserve.py  test_query.py
scripts/: benchmark.py  collect.py  dev.py  e2e.py  monitor.py  run.py  setup.py  test.py
storage/test_screenshots/: visual_hashes.json
tests/: conftest.py
tests/e2e/: __init__.py  test_api_workflow.py
tests/fixtures/: competitor_page.py
tests/integration/: test_chaos.py  test_collection_log_repository.py  test_competitor_content_repository.py  test_competitor_page_repository.py  test_competitor_pricing_repository.py  test_competitor_repository.py  test_competitor_service_repository.py  test_competitor_social_repository.py  test_competitor_source_repository.py  test_duplicate_prevention.py  test_parsing_pipeline.py  test_postgresql_features.py  test_raw_storage_repository.py  test_transaction_lifecycle.py
tests/unit/: test_asset_extraction.py  test_breadcrumb_extraction.py  test_canonical_url.py  test_collectors_raw_storage.py  test_company_parser.py  test_config_sync.py  test_configuration.py  test_content_hasher.py  test_content_parser.py  test_faq_extraction.py  test_form_extraction.py  test_generic_extraction.py  test_hybrid_fetcher.py  test_language_detector.py  test_location_extraction.py  test_page_classifier.py  test_page_segmenter.py  test_parsers.py  test_pricing_parser.py  test_relationships.py  test_resolution.py  test_review_extraction.py  test_scheduler.py  test_service_parser.py  test_social_parser.py  test_strategy_parser.py  test_table_extraction.py  test_team_extraction.py  test_trust_signal_extraction.py
(+18 files in other folders)
