[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "utservio-competitor-intelligence"
version = "0.1.0"
description = "Data collection engine for Utservio's competitor intelligence platform"
requires-python = ">=3.12"
authors = [
    { name = "Utservio Engineering", email = "engineering@utservio.com" },
]
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "httpx>=0.28,<1",
    "beautifulsoup4>=4.12,<5",
    "playwright>=1.49,<2",
    "lxml>=6.1.0,<7",
    "structlog>=24.4,<25",
    "prometheus-client>=0.21,<1",
    "imagehash>=4.3,<5",
    "Pillow>=11.0,<13",
    "redis>=5.0,<6",
    "tenacity>=9.0,<10",
    "aiofiles>=24.1,<25",
    "openai>=1.58,<2",
    "psutil>=6.1,<7",
    "playwright-stealth>=1.0.6,<2",
    "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6,<7",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
    "black>=24.10,<27",
    "types-psutil>=6.0,<7",
    "types-aiofiles>=23.0,<26",
    "aiosqlite>=0.22.1",
]
llm = [
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "locust>=2.46.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["scratch", "build", "dist", ".venv"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # Depends() in function args is standard FastAPI pattern
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["playwright_stealth", "redis.*", "aiofiles.*", "app.core.config", "app.ai.domain.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "tests.unit.*", "tests.integration.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.*",
]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
omit = [
    "app/main.py",
    "app/api/*",
    "app/database/connection.py",
    "app/schedulers/*",
    "app/services/collection_service.py",
]
